# prefect-mlops-zoomcamp

./: deployment.yaml  original_deployment.yaml  prefect.yaml  pyproject.toml
3.3/: duration_prediction_explore.ipynb  duration_prediction_original.ipynb
3.5/: create_s3_bucket_block.py
3.6/: create_s3_bucket_block.py  orchestrate_s3.py
hw/: hw3_ans.md  orchestrate.py
