[tool.poetry]
name = "prefect-mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["lucapug <lucapug@gmail.com>"]
readme = "README.md"
packages = [{include = "prefect_mlops_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "23.3.0"
fastparquet = "2023.4.0"
hyperopt = "0.2.7"
mlflow = "2.3.1"
pandas = "2.0.1"
prefect = "2.10.8"
prefect-aws = "0.3.1"
scikit-learn = "1.2.2"
seaborn = "0.12.2"
xgboost = "1.7.5"
orjson = "3.8.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
